# IIS

./: .gitignore  Dockerfile  data.dvc  docker-compose.yml  pyproject.toml  requirements.txt  test.py  test_api.py
.dvc/: config  config.local
.github/workflows/: test.yaml
data/preprocessed/: data_air.csv  data_we.csv
data/processed/: current_data.csv  data.csv  reference_data.csv  test.csv  train.csv
data/raw/weather/: data.json
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: my_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  IIS_suite.json  run_my_checkpoint.py
models/: linear  var
notebooks/: data.ipynb  model.ipynb
reports/: data_drift.html  metrics.txt  train_metrics.txt
src/client/: Dockerfile
src/client/src/app/: app.component.html  app.component.scss  app.component.ts  network.service.ts
src/data/: data_stability.py  data_validation.py  fetch_air_data.py  fetch_data.py  fetch_weather_data.py  merge_processed_data.py  preprocess_air_data.py  preprocess_weather_data.py  split_train_test.py  update_reference.py
src/models/: predict_model.py
src/serve/: dont_air_data.py  server.py  test_air_data.py  test_server_api.py  test_weather_data.py
