[tool.poetry]
name = "naloga1"
version = "1.0"
description = ""
authors = ["anagasperin <anagasperin99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.12"
numpy = "^1.24.2"
pandas = "^1.5.3"
sklearn = "^0.0.post1"
flask = "^2.2.3"
scikit-learn = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
