[tool.poetry]
name = "naloga1"
version = "1.4.0"
description = ""
authors = ["anagasperin <ana.gasperin@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.7,<4"
numpy = "^1.23.5"
pandas = "^1.5.3"
flask = "^2.2.3"
scikit-learn = "^1.2.1"
pytest = "^7.2.2"
datetime = "^5.1"
statsmodels = "^0.13.5"
flask-cors = "^3.0.10"
dvc = "^2.51.0"
requests = "^2.28.2"
great-expectations = "^0.16.3"
evidently = "^0.2.7"
llvmlite = "^0.39.0"
numba = "^0.56.4"
mlflow = "^2.2.2"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
